--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">AppBook</string>
     <string name="timKiem">Tìm Kiếm Sản Phẩm</string>
     <string name="facebook_app_id">1802278090024379</string>
+    <string name="open">Mõ</string>
+    <string name="close">Đống</string>
+
 </resources>
